styles.css
html {
    font-size: 100%;
    box-sizing: border-box;
    overflow-x: hidden;
}

body {
    position: relative;
    margin: 0;
    padding: 0;
    font-family: Montserrat;
}

header {       
    background-color: #333 !important;
    font-family: Montserrat;     
    width: 100%;
    position: sticky; 
    top: 0;
    z-index: 1;
}
#mainNav {        
    margin-left: 30px;        
}

#nav-links{
    width: 100%;
    height: 100%;    
}

ul {          
    list-style-type: none; 
    color: lightgray;    
}

ul li {    
    margin-right: 20px;
    padding-right: 30px;     
}

ul li a {
    text-decoration: none !important;
    font-size: medium;
    font-weight: bold;  
}   


.section-container {
    padding-top: 60px;
}


#landing-zone {
    height: 100vh;
    width: 100%;
    position: relative;
    
}

#backdrop{ 
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;     
    z-index: -9999;
    background-color: #777;  
    
}  


#backdrop img{
    width: 100%; 
    height: 100%;
    mix-blend-mode: multiply;      
}

#landing { 
    position: absolute;     
    width: 100%;  
    height: 100%;    
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    color: lightgrey;
    background-size: cover;
    margin-bottom: 30px;
    text-shadow: 0px 0px 5px #000;
}
    

#landing h1, h3{    
    top: 50%;
    left: 50%;
    font-family: 'Josefin Sans';      
    font-weight: bolder;
}

#landing h1{
    font-size: 5rem;
}

#landing h3{
    font-size: 2rem;
}

#down {
    position: absolute;
    top: 85vh;
    padding: 20px;
    font-size: 5rem;
}

#down:hover {
    cursor: pointer;    
    opacity: 0.8;
}

.section-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.info-section {
    font-size: 2rem;
    border-bottom: solid 4px black;
}

#portfolio h3 {
    border-bottom: solid 4px lightgray;
}

#about p{    
    width: 70%;
    margin-bottom: 30px;;
}

.tab {
    padding-left: 2rem;
}

#portfolio {    
    background-color: rgb(52, 58, 64);
    color: lightgray;
}

.cards {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    color: rgb(52, 58, 64)
}

.cards .card {
    
    max-width: 512px;
    max-height: 450px;
}

#social-media {
    display: flex; 
    flex-direction: row;
    height: 1vh;
    width: 100%;
    align-items: center;
    justify-content: center;        
}

#social-media i{          
    font-size: 2rem;     
    margin-right: 40px; 
    margin-top: 40px;    
}

#social-media a {
    color: rgb(248, 249, 250) !important
 }

#map img {
    border-radius: 25px;
    border: 2px solid lightgray;
    width: 100%;
    height: auto;
    max-width: 600px;
    
}

.contact-section {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    margin: 20px;
}

#contact-info{
    display: flex;
    flex-direction: column;
    font-weight: bold;    
    align-items: center;
}

#contact-info p {
   margin-top: 5rem;
}

footer {
    background-color: rgb(52, 58, 64);
    height: 4vh;
    color: lightgray;    
    display: flex;
    align-items: center;
    justify-content: center;
}

